--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500&family=Shrikhand&display=swap');
 header{
     display:flex;
     justify-content: space-between;
@@ -7,7 +8,8 @@ header img{
     width: 100%;
 }
 .logo{
-    width:120px
+    width:120px;
+    border-image: 5px;
 }
 .nav{
     display:flex;
@@ -27,5 +29,57 @@ header a{
 .section1{
     border:2px solid rgb(206, 153, 55);
     box-shadow:5px 7px 3px rgb(190, 179, 26);
-    
+    border-radius: 5px;
+}
+
+.galeria_img{
+    border: 2px solid rgb(19, 18, 18);
+    display:grid;
+    grid-template-columns:repeat(4,150px);
+    grid-template-rows:150px 200px;
+    gap: 35px;
+    justify-content: center;
+    justify-items: center;
+    align-items:center;
+
+}
+.galeria_img img{
+    width:80%;
+    height:80%;
+    box-shadow: 5px 7px 3px rgb(117, 114, 114);
+}
+.g1{
+    grid-column:4/5 ;
+    grid-row: 2/3;
+}
+.g2{
+    grid-column:2/3 ;
+    grid-row: 2/3;
+}
+.g3{
+    grid-column:1/2 ;
+    grid-row: 1/2;
+}
+.g4{
+    grid-column:3/4;
+    grid-row: 1/2;
+}
+.g5{
+    grid-column:1/2 ;
+    grid-row: 2/3;
+}
+.g6{
+    grid-column:4/5;
+    grid-row: 1/2;
+}
+.g7{
+    grid-column:2/3 ;
+    grid-row: 1/2;
+}
+.g8{
+    grid-column:3/4;
+    grid-row: 2/3;
+}
+p{
+    font-family: 'El Messiri', sans-serif;
 }
